<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darker_grey"
    android:padding="16dp"
    tools:context=".UserDetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_photo_detail_UI"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        style="@style/WhiteBoldText"
        android:id="@+id/tv_name_detail_UI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_photo_detail_UI"
        tools:text="@string/dummy_name_user" />

    <TextView
        android:id="@+id/tv_username_detail_UI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dummy_username"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/tv_name_detail_UI"
        app:layout_constraintStart_toStartOf="@id/tv_name_detail_UI"
        app:layout_constraintTop_toBottomOf="@id/tv_name_detail_UI" />

    <ImageView
        android:id="@+id/iv_company_detail_UI"
        android:src="@drawable/ic_baseline_apartment_24"
        app:layout_constraintTop_toBottomOf="@id/tv_username_detail_UI"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/icon_company" />

    <TextView
        android:id="@+id/tv_company_detail_UI"
        tools:text="@string/dummy_company_user"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/iv_company_detail_UI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_center_half_detail_UI"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/iv_repo_detail_UI"
        android:src="@drawable/ic_baseline_book_24"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_company_detail_UI"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/icon_repo" />

    <TextView
        style="@style/WhiteBoldText"
        android:id="@+id/tv_repo_detail_UI"
        app:layout_constraintTop_toTopOf="@id/iv_repo_detail_UI"
        app:layout_constraintStart_toEndOf="@id/iv_repo_detail_UI"
        android:layout_marginStart="8dp"
        android:text="@string/repositories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_repo_data_detail_UI"
        app:layout_constraintStart_toStartOf="@id/iv_repo_detail_UI"
        app:layout_constraintTop_toBottomOf="@id/iv_repo_detail_UI"
        tools:text="@string/dummy_repo_user"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <ImageView
        android:id="@+id/iv_location_detail_UI"
        android:src="@drawable/ic_baseline_location_on_24"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_company_detail_UI"
        app:layout_constraintStart_toStartOf="@id/gl_center_half_detail_UI"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/icon_location" />

    <TextView
        style="@style/WhiteBoldText"
        android:id="@+id/tv_location_detail_UI"
        app:layout_constraintTop_toTopOf="@id/iv_location_detail_UI"
        app:layout_constraintStart_toEndOf="@id/iv_location_detail_UI"
        android:layout_marginStart="8dp"
        android:text="@string/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_location_data_detail_UI"
        app:layout_constraintStart_toStartOf="@id/iv_location_detail_UI"
        app:layout_constraintTop_toBottomOf="@id/iv_location_detail_UI"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Location Unknown"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>



    <ImageView
        android:id="@+id/iv_follower_detail_UI"
        app:layout_constraintTop_toBottomOf="@id/tv_location_data_detail_UI"
        app:layout_constraintStart_toStartOf="@id/iv_repo_detail_UI"
        android:src="@drawable/ic_baseline_emoji_people_24"
        android:layout_marginTop="20dp"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/icon_follower" />

    <TextView
        style="@style/WhiteBoldText"
        android:id="@+id/tv_follower_detail_UI"
        app:layout_constraintTop_toTopOf="@id/iv_follower_detail_UI"
        app:layout_constraintStart_toStartOf="@id/tv_repo_detail_UI"
        android:text="@string/followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_follower_data_detail_UI"
        app:layout_constraintStart_toStartOf="@id/iv_follower_detail_UI"
        app:layout_constraintTop_toBottomOf="@id/iv_follower_detail_UI"
        android:layout_marginTop="8dp"
        tools:text="999"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/iv_following_detail_UI"
        app:layout_constraintTop_toTopOf="@id/iv_follower_detail_UI"
        app:layout_constraintStart_toStartOf="@id/gl_center_half_detail_UI"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_baseline_people_24"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/icon_following" />

    <TextView
        style="@style/WhiteBoldText"
        android:id="@+id/tv_following_detail_UI"
        app:layout_constraintTop_toTopOf="@id/iv_following_detail_UI"
        app:layout_constraintStart_toStartOf="@id/tv_location_detail_UI"
        android:text="@string/following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_following_data_detail_UI"
        app:layout_constraintStart_toStartOf="@id/iv_following_detail_UI"
        app:layout_constraintTop_toBottomOf="@id/iv_following_detail_UI"
        android:layout_marginTop="8dp"
        tools:text="999"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>